[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers and filter non-academic authors."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28"

[tool.poetry.scripts]
get-papers-list = "get_papers_list:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
